 - Remove user_eg.exe and user_eg2.exe from Windows distribution
 - Remove ptr_intT from qh_matchvertices.  It was int since the beginning.
 - Use qh_QHpointer=0 for libqhull.a, qhull, rbox, etc.
   Use -Dqh_QHpointer for libqhullp.a, qhullcpp.dll, etc.
   Cost of qh_QHpointer: [2003, msvc] 8% time 2% space, [2010, gcc] 4% time 4% space
 - user.h requires <time.h> for CLOCKS_PER_SEC
 
qhull 2010.1 2010/01/07
 - Assign type to qh.old_qhstat and memT.tempstack [amorilia]
 - Replace tabs with spaces.
 - Fix qh_pointid in case ptr_intT is unsigned

qhull 2010.1 2010/01/06
- Fixed serious bug in qh_gethash [poly.c] 
- Documentation and build system are incomplete (see above)
- First release of C++ interface [qh-code.htm]
- Development moved to http://gitorious.org/qhull 
  git clone git@gitorious.org:qhull/qhull.git
- Did not fix conformant tesselations for 'Qt'.  
  For details, see http://www.qhull.org/news#bugs of May 2007 and Dec 2006.
- Use g++ builds for Windows distribution (10% faster than msvc2005)
  Combined vcproj/ and qtproj/ into project/
  vcproj will be replaced by qmake generated files
 
qhull 2010.0.3 2010/01/05

Fixed bugs
- 'QJn' (joggle): Fix qh.STOPcone in qh_build_withrestart().  It was not cleared. 
- qh_initqhull_outputflags [global.c]: warn about Qc only if QHULLfinished, otherwise set if needed

qhull 2010.0.2 2010/01/04

- Reviewed output of q_test and compared to results from 2003.1

Fixed bugs
- qh_gethash [poly.c]: fix sign conversion.  Previously, the result may be negative, leading to a segfault.  
    The bug is more likely with large address spaces
    Reviewed all uses of %(modulo) for remainder with negative arguments

Breaking code changes
- Return type of qh_gethash changed from unsigned to int.  Matches 'size'
- addhash takes a signed hash
  qh_addhash( newelem, hashtable, hashsize, hash )

Code changes
- Test for qh_qh in qh_printf
- Makefile.txt corrected for libqhull build [amorilia]