@@ -31,8 +31,8 @@ SOURCES += src/io.c
 SOURCES += src/libqhull.c
 SOURCES += src/mem.c
 SOURCES += src/merge.c
-SOURCES += src/poly2.c
 SOURCES += src/poly.c
+SOURCES += src/poly2.c
 SOURCES += src/qset.c
 SOURCES += src/random.c
 SOURCES += src/rboxlib.c
