@@ -115,6 +115,7 @@ qhull 2010.1 2010/01/09
    Use -Dqh_QHpointer for libqhullp.a, qhullcpp.dll, etc.
    Cost of qh_QHpointer: [2003, msvc] 8% time 2% space, [2010, gcc] 4% time 4% space
  - user.h requires <time.h> for CLOCKS_PER_SEC
+ - Add CMakeLists.txt [kwilliams]
  
 qhull 2010.1 2010/01/07
  - Assign type to qh.old_qhstat and memT.tempstack [amorilia]
